--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,15 @@ spring:
       password: mysqltest
       driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://127.0.0.1:3306/test?serverTimezone=UTC
+  redis:
+    host: localhost
+    port: 6379
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.example.springbootshiro.domain
   configuration:
     map-underscore-to-camel-case: true
+logging:
+  level:
+    com.example.springbootshiro.dao: debug
